[package]
name = "knot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
lto = true

[dependencies]
petgraph = "0.6.0"
ndarray = "0.15"
rand = {version="0.8", default_features=false, features=["small_rng"]}
itertools = "0.10"
indicatif = "0.16.0"
colored = "2.0"
pyo3 = "0.15"
retworkx-core = "0.11"
statrs = "0.15"

[dependencies.hashbrown]
version = "0.11"